# zerosaver

./: DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  README.md  main.py  pyproject.toml  requirements.txt  start-dev.sh
backend/: .env  Dockerfile  NOTIFICATION_INTEGRATION.md  compose.yaml  dbinit.sql  main.py  pyproject.toml  requirements.txt  test.db  test_supabase_client.py
backend/alembic/: env.py
backend/alembic/versions/: 1b5d2a4e1f3c_add_order_time_to_vendor.py  7c9c5f3d9c9a_add_pickup_code_to_orders.py
backend/api/dependencies/: services.py
backend/api/endpoints/: vendor.py
backend/app/: config.py  main.py  middleware.py
backend/app/api/: __init__.py  admin.py  auth.py  cart.py  deals.py  health.py  users.py  vendor.py
backend/app/crud/: cart.py  user.py  vendor.py
backend/app/models/: __init__.py  cart.py  deal.py  user.py  vendor.py
backend/app/schemas/: auth.py  cart.py  deal.py  user.py  vendor.py
backend/app/services/: auth_service.py  cart_service.py  vendor_service.py
backend/app/utils/: auth_dependencies.py  services.py
backend/core/: config.py  db.py  middleware.py  paystack.py  tokens.py
backend/crud/: order.py
backend/models/: __init__.py  order.py  vendor.py
backend/schemas/: order.py  vendor.py
backend/services/: cart_service.py  vendor_service.py
backend/utils/: postmark_client.py  random_id.py  send_email.py
frontend/: package-lock.json  package.json  vercel.json
frontend/app/: globals.css  page-clean.tsx  page-old.tsx  page.tsx
frontend/components/: Analytics.tsx  Explore.tsx  Header.tsx  NavHeader.tsx  (+3 more)
(+12 files in other folders)
