[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tmhieu2000@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
passlib = {extras = ["brcypt"], version = "^1.7.4"}
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.7"
trio = "^0.25.1"
pytest-freezegun = "^0.4.2"
pyjwt = "^2.8.0"
requests = "^2.32.3"
stripe = "^9.11.0"
arq = "^0.26.0"
factory-boy = "^3.3.0"
mypy = "^1.10.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
